--- a/BikeSharing/Map.storyboard
+++ b/BikeSharing/Map.storyboard
@@ -13,24 +13,27 @@
         <!--Map-->
         <scene sceneID="Rl8-xk-Ze0">
             <objects>
-                <viewController title="Map" id="s3p-qF-n3S" sceneMemberID="viewController">
+                <viewController title="Map" id="s3p-qF-n3S" customClass="MapViewController" customModule="BikeSharing" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1ss-DR-WdM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="yop-q3-yiZ">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="90K-mv-of4" firstAttribute="bottom" secondItem="yop-q3-yiZ" secondAttribute="bottom" id="1cs-bX-Wlo"/>
                             <constraint firstItem="yop-q3-yiZ" firstAttribute="leading" secondItem="90K-mv-of4" secondAttribute="leading" id="EBH-yT-Jcn"/>
-                            <constraint firstItem="yop-q3-yiZ" firstAttribute="top" secondItem="90K-mv-of4" secondAttribute="top" id="bLY-Nm-bfR"/>
+                            <constraint firstItem="yop-q3-yiZ" firstAttribute="top" secondItem="1ss-DR-WdM" secondAttribute="top" id="bLY-Nm-bfR"/>
                             <constraint firstItem="90K-mv-of4" firstAttribute="trailing" secondItem="yop-q3-yiZ" secondAttribute="trailing" id="ceB-qs-kWN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="90K-mv-of4"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="yop-q3-yiZ" id="HoW-gH-tAw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WPV-cD-M8x" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
