--- a/BikeSharing/Accounts.storyboard
+++ b/BikeSharing/Accounts.storyboard
@@ -22,19 +22,27 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="112"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zcw-Ro-YIo">
-                                    <rect key="frame" x="21" y="13" width="88" height="84"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="zcw-Ro-YIo">
+                                    <rect key="frame" x="16" y="16" width="80" height="80"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="80" id="7Pb-qI-NWc"/>
+                                        <constraint firstAttribute="width" secondItem="zcw-Ro-YIo" secondAttribute="height" id="Vk5-ts-B7g"/>
+                                    </constraints>
                                 </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBO-ae-Qvp">
-                                    <rect key="frame" x="126" y="21" width="42" height="21"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eBO-ae-Qvp">
+                                    <rect key="frame" x="112" y="45.5" width="33.5" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstItem="zcw-Ro-YIo" firstAttribute="leading" secondItem="jLk-ek-KQT" secondAttribute="leading" constant="16" id="N7l-bt-bJB"/>
+                                <constraint firstItem="eBO-ae-Qvp" firstAttribute="centerY" secondItem="zcw-Ro-YIo" secondAttribute="centerY" id="Z9V-IU-O0V"/>
+                                <constraint firstItem="zcw-Ro-YIo" firstAttribute="centerY" secondItem="jLk-ek-KQT" secondAttribute="centerY" id="mHI-BP-Zgi"/>
+                                <constraint firstItem="eBO-ae-Qvp" firstAttribute="leading" secondItem="zcw-Ro-YIo" secondAttribute="trailing" constant="16" id="pyg-Wl-eia"/>
+                            </constraints>
                         </view>
                         <view key="tableFooterView" contentMode="scaleToFill" id="918-QN-8st">
                             <rect key="frame" x="0.0" y="272" width="414" height="44"/>
@@ -131,4 +139,7 @@
             <point key="canvasLocation" x="-163.768115942029" y="120.53571428571428"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="avatar-placeholder" width="300" height="250"/>
+    </resources>
 </document>
